@@ -49,6 +49,17 @@ which you can discover yourself by running ``docbuilder -h`` or
   package in :term:`Subversion`. If you set this flag only documentation 
   from the development trunk will be built.
 
+* ``--index-template=<PATH>``: This optional parameter contains a 
+  filesystem path to a folder containing a `Sphinx` configuration and 
+  templates/static files. If you provide such a path 
+  :mod:`dataflake.docbuilder` will use it to build additional content 
+  for the ``output-directory`` folder and auto-generate an index file. 
+  Please note: This folder must not contain an ``index.rst`` document, 
+  as the index file will be auto-generated during the documentation 
+  build process. You can optionally provide a template named 
+  ``index.rst.in`` in the ``index-template`` folder, which will have 
+  the autogenerated package list appended at the end.
+
 * ``--docs-directory=<NAME>``: The folder name inside your software 
   package checkout where `Sphinx` documentation is stored. By 
   default, the folders `doc` and `docs` are searched. You can use this 
